// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index getSealedSecret should getSealedSecret for scope=cluster 1`] = `
Object {
  "apiVersion": "bitnami.com/v1alpha1",
  "kind": "SealedSecret",
  "metadata": Object {
    "annotations": Object {
      "sealedsecrets.bitnami.com/cluster-wide": "true",
    },
    "name": "some-name",
    "namespace": "some-namespace",
  },
  "spec": Object {
    "encryptedData": Object {
      "value1": Any<String>,
      "value2": Any<String>,
    },
    "template": Object {
      "metadata": Object {
        "annotations": Object {
          "sealedsecrets.bitnami.com/cluster-wide": "true",
        },
        "name": "some-name",
      },
      "type": "Opaque",
    },
  },
}
`;

exports[`index getSealedSecret should getSealedSecret for scope=namespace 1`] = `
Object {
  "apiVersion": "bitnami.com/v1alpha1",
  "kind": "SealedSecret",
  "metadata": Object {
    "annotations": Object {
      "sealedsecrets.bitnami.com/namespace-wide": "true",
    },
    "name": "some-name",
    "namespace": "some-namespace",
  },
  "spec": Object {
    "encryptedData": Object {
      "value1": Any<String>,
      "value2": Any<String>,
    },
    "template": Object {
      "metadata": Object {
        "annotations": Object {
          "sealedsecrets.bitnami.com/namespace-wide": "true",
        },
        "name": "some-name",
      },
      "type": "Opaque",
    },
  },
}
`;

exports[`index getSealedSecret should getSealedSecret for scope=strict 1`] = `
Object {
  "apiVersion": "bitnami.com/v1alpha1",
  "kind": "SealedSecret",
  "metadata": Object {
    "annotations": Object {},
    "name": "some-name",
    "namespace": "some-namespace",
  },
  "spec": Object {
    "encryptedData": Object {
      "value1": Any<String>,
      "value2": Any<String>,
    },
    "template": Object {
      "metadata": Object {
        "annotations": Object {},
        "name": "some-name",
      },
      "type": "Opaque",
    },
  },
}
`;
